gwangju/1st/src/k8s/argocd/green/gitops-green/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-svc
  namespace: skills
spec:
  type: NodePort
  selector:
    app: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
